--- a/index.html
+++ b/index.html
@@ -7,124 +7,117 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="wrapp">
-		<header>
-			<div class="logo"><img src="./images/header.png" alt=""></div>
-		</header>
-		<section>
-			<div class="intro">
-				<h1>Искать людей в команду, конечно, хорошо, но нанять сразу слаженную команду — идеально! Это как собрать всех покемонов, только круче.</h1>
-				<p>Давайте знакомиться: мы - команда хоть куда: хоть в кранчи, хоть в бар. Смеемся в лицо дедлайнам и твердо убеждены, что задачу нужно делать сразу, тогда останется побольше времени все исправить. Вот уже более двух лет мы бок о бок работаем в сфере отечественного геймдева, что объясняет нервные тики, и сейчас находимся в поисках интересных деловых предложений. Умеем делать полноценные порталы и сайты, лончеры и прочие приложения на любой вкус, наладим внутреннюю аналитику и логирование, напишем и сверстаем крассивые лендинги и рассылки, разработаем user-flow, выстроим работу с комьюнити, накодим, надизайним, напишем и подметем за собой. А главное, сделаем все это с любовью и на совесть.</p>
-			</div>
-			<div class="list">
-				<h2>В главных ролях:</h2>
-				<ul>
-					<li>
-						<div class="cover-list-item">
-							<img src="./images/list-item-cover.png" alt="">
-						</div>
-						<div class="content-list-item">
-							<p class="title-list-item">Руководитель проекта</p>
-							<p class="text-list-item">
-								За плечами 8 лет работы в геймдеве, последний год — в качестве руководителя оператора. Цирк перестал быть смешным. Являюсь центром мозговых операций и знаю идивидуальный подход ко всем этим творческим личностям. С готовностью возьму на себя руководство командой и построение общих стратегий, аналитику проекта, закупку трафика, разработку UX-схем, SEO-оптимизацию и много чего другого.
-							</p>
-							<a href="#" class="btn-list-item">
-								<span class="btn-list-item-top">Резюме</span>
-								<span class="btn-list-item-middle"></span>
-								<span class="btn-list-item-bottom"></span>
-							</a>
-						</div>
-					</li>
-					<li>
-						<div class="cover-list-item">
-							<img src="./images/list-item-cover.png" alt="">
-						</div>
-						<div class="content-list-item">
-							<p class="title-list-item">Руководитель проекта</p>
-							<p class="text-list-item">
-								За плечами 8 лет работы в геймдеве, последний год — в качестве руководителя оператора. Цирк перестал быть смешным. Являюсь центром мозговых операций и знаю идивидуальный подход ко всем этим творческим личностям. С готовностью возьму на себя руководство командой и построение общих стратегий, аналитику проекта, закупку трафика, разработку UX-схем, SEO-оптимизацию и много чего другого.
-							</p>
-							<a href="#" class="btn-list-item">
-								<span class="btn-list-item-top">Резюме</span>
-								<span class="btn-list-item-middle"></span>
-								<span class="btn-list-item-bottom"></span>
-							</a>
-						</div>
-					</li>
-					<li>
-						<div class="cover-list-item">
-							<img src="./images/list-item-cover.png" alt="">
-						</div>
-						<div class="content-list-item">
-							<p class="title-list-item">Руководитель проекта</p>
-							<p class="text-list-item">
-								За плечами 8 лет работы в геймдеве, последний год — в качестве руководителя оператора. Цирк перестал быть смешным. Являюсь центром мозговых операций и знаю идивидуальный подход ко всем этим творческим личностям. С готовностью возьму на себя руководство командой и построение общих стратегий, аналитику проекта, закупку трафика, разработку UX-схем, SEO-оптимизацию и много чего другого.
-							</p>
-							<a href="#" class="btn-list-item">
-								<span class="btn-list-item-top">Резюме</span>
-								<span class="btn-list-item-middle"></span>
-								<span class="btn-list-item-bottom"></span>
-							</a>
-						</div>
-					</li>
-					<li>
-						<div class="cover-list-item">
-							<img src="./images/list-item-cover.png" alt="">
-						</div>
-						<div class="content-list-item">
-							<p class="title-list-item">Руководитель проекта</p>
-							<p class="text-list-item">
-								За плечами 8 лет работы в геймдеве, последний год — в качестве руководителя оператора. Цирк перестал быть смешным. Являюсь центром мозговых операций и знаю идивидуальный подход ко всем этим творческим личностям. С готовностью возьму на себя руководство командой и построение общих стратегий, аналитику проекта, закупку трафика, разработку UX-схем, SEO-оптимизацию и много чего другого.
-							</p>
-							<a href="#" class="btn-list-item">
-								<span class="btn-list-item-top">Резюме</span>
-								<span class="btn-list-item-middle"></span>
-								<span class="btn-list-item-bottom"></span>
-							</a>
-						</div>
-					</li>
-					<li>
-						<div class="cover-list-item">
-							<img src="./images/list-item-cover.png" alt="">
-						</div>
-						<div class="content-list-item">
-							<p class="title-list-item">Руководитель проекта</p>
-							<p class="text-list-item">
-								За плечами 8 лет работы в геймдеве, последний год — в качестве руководителя оператора. Цирк перестал быть смешным. Являюсь центром мозговых операций и знаю идивидуальный подход ко всем этим творческим личностям. С готовностью возьму на себя руководство командой и построение общих стратегий, аналитику проекта, закупку трафика, разработку UX-схем, SEO-оптимизацию и много чего другого.
-							</p>
-							<a href="#" class="btn-list-item">
-								<span class="btn-list-item-top">Резюме</span>
-								<span class="btn-list-item-middle"></span>
-								<span class="btn-list-item-bottom"></span>
-							</a>
-						</div>
-					</li>
-					<li>
-						<div class="cover-list-item">
-							<img src="./images/list-item-cover.png" alt="">
-						</div>
-						<div class="content-list-item">
-							<p class="title-list-item">Руководитель проекта</p>
-							<p class="text-list-item">
-								За плечами 8 лет работы в геймдеве, последний год — в качестве руководителя оператора. Цирк перестал быть смешным. Являюсь центром мозговых операций и знаю идивидуальный подход ко всем этим творческим личностям. С готовностью возьму на себя руководство командой и построение общих стратегий, аналитику проекта, закупку трафика, разработку UX-схем, SEO-оптимизацию и много чего другого.
-							</p>
-							<a href="#" class="btn-list-item">
-								<span class="btn-list-item-top">Резюме</span>
-								<span class="btn-list-item-middle"></span>
-								<span class="btn-list-item-bottom"></span>
-							</a>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</section>
-		<div class="bg-el1"></div>
-		<div class="bg-el2"></div>
-		<div class="bg-el3"></div>
-		<div class="bg-el4"></div>
+	<div class="container">
+		<div class="row">
+			<header>
+				<div class="col">
+					<div class="logo">
+						<img src="./images/header.png" alt="">
+					</div>
+				</div>
+			</header>
+			<section>
+				<div class="intro col-12">
+					<h1 class="mb-2">Искать людей в команду, конечно, хорошо, но нанять сразу слаженную команду — идеально! Это как собрать всех покемонов, только круче.</h1>
+					<p>Давайте знакомиться: мы - команда хоть куда: хоть в кранчи, хоть в бар. Смеемся в лицо дедлайнам и твердо убеждены, что задачу нужно делать сразу, тогда останется побольше времени все исправить. Вот уже более двух лет мы бок о бок работаем в сфере отечественного геймдева, что объясняет нервные тики, и сейчас находимся в поисках интересных деловых предложений. Умеем делать полноценные порталы и сайты, лончеры и прочие приложения на любой вкус, наладим внутреннюю аналитику и логирование, напишем и сверстаем крассивые лендинги и рассылки, разработаем user-flow, выстроим работу с комьюнити, накодим, надизайним, напишем и подметем за собой. А главное, сделаем все это с любовью и на совесть.</p>
+				</div>
+				<div class="list">
+					<h2>В главных ролях:</h2>
+					<ul>
+						<li class="row justify-content-md-center mb-5">
+							<div class="cover-list-item col-12">
+								<img src="./images/list-item-cover.png" alt="">
+							</div>
+							<div class="content-list-item col-12">
+								<p class="title-list-item mt-2">Руководитель проекта</p>
+								<p class="text-list-item">
+									За плечами 8 лет работы в геймдеве, последний год — в качестве руководителя оператора. Цирк перестал быть смешным. Являюсь центром мозговых операций и знаю идивидуальный подход ко всем этим творческим личностям. С готовностью возьму на себя руководство командой и построение общих стратегий, аналитику проекта, закупку трафика, разработку UX-схем, SEO-оптимизацию и много чего другого.
+								</p>
+								<a href="#" class="btn-list-item mt-2">
+									<span class="btn-list-item-top">Резюме</span>
+									<span class="btn-list-item-middle"></span>
+									<span class="btn-list-item-bottom"></span>
+								</a>
+							</div>
+						</li>
+						<li class="row justify-content-md-center mb-5">
+							<div class="cover-list-item col-12">
+								<img src="./images/list-item-cover.png" alt="">
+							</div>
+							<div class="content-list-item col-12">
+								<p class="title-list-item mt-2">Руководитель проекта</p>
+								<p class="text-list-item">
+									За плечами 8 лет работы в геймдеве, последний год — в качестве руководителя оператора. Цирк перестал быть смешным. Являюсь центром мозговых операций и знаю идивидуальный подход ко всем этим творческим личностям. С готовностью возьму на себя руководство командой и построение общих стратегий, аналитику проекта, закупку трафика, разработку UX-схем, SEO-оптимизацию и много чего другого.
+								</p>
+								<a href="#" class="btn-list-item mt-2">
+									<span class="btn-list-item-top">Резюме</span>
+									<span class="btn-list-item-middle"></span>
+									<span class="btn-list-item-bottom"></span>
+								</a>
+							</div>
+						</li>
+						<li class="row justify-content-md-center mb-5">
+							<div class="cover-list-item col-12">
+								<img src="./images/list-item-cover.png" alt="">
+							</div>
+							<div class="content-list-item col-12">
+								<p class="title-list-item mt-2">Руководитель проекта</p>
+								<p class="text-list-item">
+									За плечами 8 лет работы в геймдеве, последний год — в качестве руководителя оператора. Цирк перестал быть смешным. Являюсь центром мозговых операций и знаю идивидуальный подход ко всем этим творческим личностям. С готовностью возьму на себя руководство командой и построение общих стратегий, аналитику проекта, закупку трафика, разработку UX-схем, SEO-оптимизацию и много чего другого.
+								</p>
+								<a href="#" class="btn-list-item mt-2">
+									<span class="btn-list-item-top">Резюме</span>
+									<span class="btn-list-item-middle"></span>
+									<span class="btn-list-item-bottom"></span>
+								</a>
+							</div>
+						</li>
+						<li class="row justify-content-md-center mb-5">
+							<div class="cover-list-item col-12">
+								<img src="./images/list-item-cover.png" alt="">
+							</div>
+							<div class="content-list-item col-12">
+								<p class="title-list-item mt-2">Руководитель проекта</p>
+								<p class="text-list-item">
+									За плечами 8 лет работы в геймдеве, последний год — в качестве руководителя оператора. Цирк перестал быть смешным. Являюсь центром мозговых операций и знаю идивидуальный подход ко всем этим творческим личностям. С готовностью возьму на себя руководство командой и построение общих стратегий, аналитику проекта, закупку трафика, разработку UX-схем, SEO-оптимизацию и много чего другого.
+								</p>
+								<a href="#" class="btn-list-item mt-2">
+									<span class="btn-list-item-top">Резюме</span>
+									<span class="btn-list-item-middle"></span>
+									<span class="btn-list-item-bottom"></span>
+								</a>
+							</div>
+						</li>
+						<li class="row justify-content-md-center mb-5">
+							<div class="cover-list-item col-12">
+								<img src="./images/list-item-cover.png" alt="">
+							</div>
+							<div class="content-list-item col-12">
+								<p class="title-list-item mt-2">Руководитель проекта</p>
+								<p class="text-list-item">
+									За плечами 8 лет работы в геймдеве, последний год — в качестве руководителя оператора. Цирк перестал быть смешным. Являюсь центром мозговых операций и знаю идивидуальный подход ко всем этим творческим личностям. С готовностью возьму на себя руководство командой и построение общих стратегий, аналитику проекта, закупку трафика, разработку UX-схем, SEO-оптимизацию и много чего другого.
+								</p>
+								<a href="#" class="btn-list-item mt-2">
+									<span class="btn-list-item-top">Резюме</span>
+									<span class="btn-list-item-middle"></span>
+									<span class="btn-list-item-bottom"></span>
+								</a>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<div class="bg-el1 bg-m"></div>
+			<div class="bg-el2 bg-m"></div>
+			<div class="bg-el3 bg-m"></div>
+			<div class="bg-el4 bg-m"></div>
+		</div>
 	</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
