--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 						</li>
 						<li class="row justify-content-md-center mb-5">
 							<div class="cover-list-item col-12">
-								<img src="./images/list-item-cover.png" alt="">
+								<img src="./photo/Ilya%20GIF%20300.gif" alt="">
 							</div>
 							<div class="content-list-item col-12">
 								<p class="title-list-item mt-2">QA Engineer</p>
@@ -218,7 +218,7 @@
 						</li>
 						<li class="row justify-content-md-center mb-5">
 							<div class="cover-list-item col-12">
-								<img src="./images/list-item-cover.png" alt="">
+								<img src="./photo/Denis%20GIF%20300.gif" alt="">
 							</div>
 							<div class="content-list-item col-12">
 								<p class="title-list-item mt-2">Комьюнити-менеджер</p>
