--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!--
+
+  ##  ##   ######
+  ##  ##   ##   ##
+  ######   ## ####
+  ##  ##   ##  ##
+  ##  ##   ##   ##
+
+  Welcome HR! The page was made in a day
+
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,16 +41,16 @@
 					<h2>В главных ролях:</h2>
 					<ul>
 						<li class="row justify-content-md-center mb-5">
-							<div class="cover-list-item col-12">
+							<div class="cover-list-item col-12 col-lg-3">
 <!--								<img src="./images/list-item-cover-border.png" alt="">-->
 								<img src="./photo/Anna%20GIF%20300.gif" alt="" class="">
 							</div>
-							<div class="content-list-item col-12">
+							<div class="content-list-item col-12 col-lg-9">
 								<p class="title-list-item mt-2">Руководитель проекта</p>
 								<p class="text-list-item">
-									За плечами 5 лет работы в геймдеве, последний год — в качестве руководителя оператора. Цирк перестал быть смешным. Являюсь центром мозговых операций и знаю подход ко всем этим творческим личностям. С готовностью возьму на себя руководство командой и построение общих стратегий, аналитику проекта, разработку тех. заданий и UX-схем, SEO-оптимизацию и много чего другого.
+									За плечами 5 лет работы в геймдеве, последний год — в качестве директора оператора. Цирк перестал быть смешным. Являюсь центром мозговых операций и знаю подход ко всем этим творческим личностям. С готовностью возьму на себя руководство командой и построение общих стратегий, аналитику проекта, разработку тех. заданий, UX-схем и много чего другого.
 								</p>
-								<a href="https://hh.ru/resume/c396f9dfff09e151410039ed1f494639624148" class="btn-list-item mt-2">
+								<a href="https://hh.ru/resume/c396f9dfff09e151410039ed1f494639624148" class="btn-list-item mt-2" target="_blank">
 									<span class="btn-list-item-top">Резюме</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
@@ -47,16 +58,15 @@
 							</div>
 						</li>
 						<li class="row justify-content-md-center mb-5">
-							<div class="cover-list-item col-12">
-								<!--								<img src="./images/list-item-cover-border.png" alt="">-->
-								<img src="./photo/Roma%20GIF%20300.gif" alt="" class="">
+							<div class="cover-list-item col-12 col-lg-3">
+								<img src="./photo/Mitya%20GIF%20300.gif" alt="">
 							</div>
-							<div class="content-list-item col-12">
-								<p class="title-list-item mt-2">Ведущий web-разработчик</p>
+							<div class="content-list-item col-12 col-lg-9">
+								<p class="title-list-item mt-2">Веб-программист / Тех-лид</p>
 								<p class="text-list-item">
-									Скромный разработчик крутых сайтов и Web систем. Сложность не пугает, а пробуждает интерес. Основной стек: PHP, MySQL, PostgreSQL, Redis, Memcache, NGINX, GIT, HTML, CSS, JS. Основной фреймворк - Codeigniter. Почему? Что бы не из пушки по воробьям!) Есть опыт работы с WP, HostCMS, Opencard, ModX.
+									Ниндзя-программист к вашим услугам: быстро сделаю проект, который запустится даже на вашей Nokia 3310! Создам архитектуру приложения, займусь аналитикой больших объемов данных, могу во фронтенд и бекенд. Основные языки — PHP и JS. А еще я люблю логи. О логи мои логи, обрабатываю ежедневно по 25 Гб или день прошел зря.
 								</p>
-								<a href="https://obninsk.hh.ru/resume/c6f9c363ff01932f130039ed1f376939684757" class="btn-list-item mt-2">
+								<a href="https://hh.ru/resume/8185ea2cff09e426f80039ed1f785269316b63" class="btn-list-item mt-2" target="_blank">
 									<span class="btn-list-item-top">Резюме</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
@@ -64,20 +74,20 @@
 							</div>
 						</li>
 						<li class="row justify-content-md-center mb-5">
-							<div class="cover-list-item col-12">
+							<div class="cover-list-item col-12 col-lg-3">
 								<img src="./photo/Egor%20GIF%20300.gif" alt="">
 							</div>
-							<div class="content-list-item col-12">
+							<div class="content-list-item col-12 col-lg-9">
 								<p class="title-list-item mt-2">Ведущий дизайнер</p>
 								<p class="text-list-item">
 									У всех нормальных людей есть пакет с пакетами, а у меня — макет с макетами. Сайты, лендинги, рассылки — всё давайте, да побольше! Нарисую быстро, но красиво, а еще позабочусь о пользователях — UI/UX для меня не пустой звук. Поиграться со шрифтами за отдельную плату. Ах да, и этот лендинг тоже я рисовал!
 								</p>
-								<a href="https://hh.ru/resume/3c153ea0ff017c8fa90039ed1f716c62593948" class="btn-list-item mt-2">
+								<a href="https://hh.ru/resume/1dfd6428ff09eb4d300039ed1f346b6c58446b" class="btn-list-item mt-2" target="_blank">
 									<span class="btn-list-item-top">Резюме</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
 								</a>
-								<a href="https://www.behance.net/EgorKarayani" class="btn-list-item mt-2">
+								<a href="https://www.behance.net/EgorKarayani" class="btn-list-item invert mt-2" target="_blank">
 									<span class="btn-list-item-top">Behance</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
@@ -85,20 +95,20 @@
 							</div>
 						</li>
 						<li class="row justify-content-md-center mb-5">
-							<div class="cover-list-item col-12">
+							<div class="cover-list-item col-12 col-lg-3">
 								<img src="./photo/Pasha%20GIF%20300.gif" alt="" class="">
 							</div>
-							<div class="content-list-item col-12">
-								<p class="title-list-item mt-2">Ведущий комьюнити-менеджер / UX-редакт</p>
+							<div class="content-list-item col-12 col-lg-9">
+								<p class="title-list-item mt-2">Ведущий комьюнити-менеджер / UX-редактор</p>
 								<p class="text-list-item">
 									Очень люблю людей, а самая сильная любовь — на расстоянии. Напишу тексты любой сложности, от коротких лозунгов до полноценных пресс-релизов, умею объяснять сложные вещи простыми словами. С готовностью окунусь в UX-тексты и SEO. Могу целиком на себя взять направление комьюнити-менеджмента. А еще я автор всего текста на этой странице :)
 								</p>
-								<a href="https://hh.ru/resume/99606255ff09ea81010039ed1f704778733566" class="btn-list-item mt-2">
+								<a href="https://hh.ru/resume/99606255ff09ea81010039ed1f704778733566" class="btn-list-item mt-2" target="_blank">
 									<span class="btn-list-item-top">Резюме</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
 								</a>
-								<a href="http://p.rodionov.tilda.ws/" class="btn-list-item mt-2">
+								<a href="http://p.rodionov.tilda.ws/" class="btn-list-item mt-2 invert" target="_blank">
 									<span class="btn-list-item-top">Tilda</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
@@ -106,52 +116,54 @@
 							</div>
 						</li>
 						<li class="row justify-content-md-center mb-5">
-							<div class="cover-list-item col-12">
+							<div class="cover-list-item col-12 col-lg-3">
 								<img src="./photo/Volodiya%20GIF%20300.gif" alt="">
 							</div>
-							<div class="content-list-item col-12">
+							<div class="content-list-item col-12 col-lg-9">
 								<p class="title-list-item mt-2">Графический дизайнер</p>
 								<p class="text-list-item">
 									Да-да, еще один, заводы стоят, кругом одни дизайнеры. Но я особенный! И очень полезный. Подготовлю графические материалы для сайтов, лендингов, порталов, рассылок. Отрисую кнопки, иконки, баннеры. Сделаю оформление для любых соцсетей. Могу работать с видео, дружу с Blender, Sony Vegas, пакетом Adobe. Как бонус — в совершенстве знаю английский и французский, немножечко польский.
 								</p>
-								<a href="https://hh.ru/applicant/resumes/view?resume=380fa7d4ff06f622e70039ed1f31394d314f74" class="btn-list-item mt-2">
+								<a href="https://hh.ru/resume/d0b65302ff09e3ee0a0039ed1f72717a65385a" class="btn-list-item mt-2" target="_blank">
 									<span class="btn-list-item-top">Резюме</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
 								</a>
-								<a href="https://readymag.com/u280413490/3384926/" class="btn-list-item mt-2">
+								<a href="https://readymag.com/u280413490/3384926/" class="btn-list-item invert mt-2" target="_blank">
 									<span class="btn-list-item-top">ReadyMag</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
 								</a>
 							</div>
 						</li>
+						<!--
 						<li class="row justify-content-md-center mb-5">
-							<div class="cover-list-item col-12">
-								<img src="./photo/Mitya%20GIF%20300.gif" alt="">
+							<div class="cover-list-item col-12 col-lg-3">
+								<img src="./photo/Roma%20GIF%20300.gif" alt="" class="">
 							</div>
-							<div class="content-list-item col-12">
-								<p class="title-list-item mt-2">Веб-программист</p>
+							<div class="content-list-item col-12 col-lg-9">
+								<p class="title-list-item mt-2">Ведущий web-разработчик</p>
 								<p class="text-list-item">
-									Ниндзя-программист к вашим услугам: быстро сделаю проект, который запустится даже на вашей Nokia 3310! Создам архитектуру приложения, займусь аналитикой больших объемов данных, могу во фронтенд и бекенд. Основные языки — PHP и JS. А еще я люблю логи. О логи мои логи, обрабатываю ежедневно по 25 Гб или день прошел зря.
+									Скромный разработчик крутых сайтов и Web систем. Сложность не пугает, а пробуждает интерес. Основной стек: PHP, MySQL, PostgreSQL, Redis, Memcache, NGINX, GIT, HTML, CSS, JS. Основной фреймворк - Codeigniter. Почему? Что бы не из пушки по воробьям!) Есть опыт работы с WP, HostCMS, Opencard, ModX.
 								</p>
-								<a href="https://hh.ru/resume/8185ea2cff09e426f80039ed1f785269316b63" class="btn-list-item mt-2">
+								<a href="https://obninsk.hh.ru/resume/c6f9c363ff01932f130039ed1f376939684757" class="btn-list-item mt-2" target="_blank">
 									<span class="btn-list-item-top">Резюме</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
 								</a>
 							</div>
 						</li>
+						-->
 						<li class="row justify-content-md-center mb-5">
-							<div class="cover-list-item col-12">
+							<div class="cover-list-item col-12 col-lg-3">
 								<img src="./photo/Stas%20GIF%20300.gif" alt="">
 							</div>
-							<div class="content-list-item col-12">
+							<div class="content-list-item col-12 col-lg-9">
 								<p class="title-list-item mt-2">PHP Backend Developer</p>
 								<p class="text-list-item">
 									PHP наше всё! Я даже в чате смеюсь пхпхпхпхп. Еще знаком с Python, Node.JS и C#, но тут уже не до смеха. Умею в бекенд — пишу модули на фреймворках (CodeIgniter 3/4, Laravel, Bottle, Flask, Express), API, интеграции, парсеры/грабберы, агрегаторы, дашборды, мониторинг. Настрою веб-сервер с нуля и затюню конфиги, поработаю с БД. И еще много чего могу, но редактор ворчит, что это все сюда не влезет.
 								</p>
-								<a href="https://obninsk.hh.ru/applicant/resumes/view?resume=6df28176ff09e3e4710039ed1f5346586d6653" class="btn-list-item mt-2">
+								<a href="https://obninsk.hh.ru/applicant/resumes/view?resume=6df28176ff09e3e4710039ed1f5346586d6653" class="btn-list-item mt-2" target="_blank">
 									<span class="btn-list-item-top">Резюме</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
@@ -159,20 +171,20 @@
 							</div>
 						</li>
 						<li class="row justify-content-md-center mb-5">
-							<div class="cover-list-item col-12">
+							<div class="cover-list-item col-12 col-lg-3">
 								<img src="./photo/Ilya%20GIF%20300.gif" alt="">
 							</div>
-							<div class="content-list-item col-12">
+							<div class="content-list-item col-12 col-lg-9">
 								<p class="title-list-item mt-2">QA Engineer</p>
 								<p class="text-list-item">
 									Нет, ну вы видели? Вон сколько всего умеют, а мне потом это тестировать! Дотошно все за ними проверю, составлю тестовую документацию (чек-листы, кейсы, баг-репорты) и заведу в багтрекинг (JIRA / Confluenсe). Проведу ручное тестирование, регрессионные тесты, смоук тесты, приемочные тесты. Полный комплекс мер по выявлению коварных багов, чтоб все работало как часы!
 								</p>
-								<a href="https://obninsk.hh.ru/applicant/resumes/view?resume=6df28176ff09e3e4710039ed1f5346586d6653" class="btn-list-item mt-2">
+								<a href="https://lipetsk.hh.ru/resume/d093e53cff09d56c5e0039ed1f4f6645597363" class="btn-list-item mt-2" target="_blank">
 									<span class="btn-list-item-top">Резюме</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
 								</a>
-								<a href="https://www.linkedin.com/in/ilya-kornev-a08144237/" class="btn-list-item mt-2">
+								<a href="https://www.linkedin.com/in/ilya-kornev-a08144237/" class="btn-list-item invert mt-2" target="_blank">
 									<span class="btn-list-item-top">LinkedIn</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
@@ -180,20 +192,20 @@
 							</div>
 						</li>
 						<li class="row justify-content-md-center mb-5">
-							<div class="cover-list-item col-12">
+							<div class="cover-list-item col-12 col-lg-3">
 								<img src="./photo/Nastya%20GIF%20300.gif" alt="">
 							</div>
-							<div class="content-list-item col-12">
+							<div class="content-list-item col-12 col-lg-9">
 								<p class="title-list-item mt-2">Junior-маркетолог / Комьюнити-менеджер</p>
 								<p class="text-list-item">
 									Опыта в маркетинге не так много, зато глаза горят! А лучше глаза, чем сами знаете что. Разработаю сценарии для роликов, распишу текст на промо-сайты и лендинги, подготовлю рассылки и баннеры, выведу корпоративные соцсети на новый уровень. Подберу и проанализирую площадки для размещения, составлю понятное ТЗ на дизайнеров. А еще могу быть классным комьюнити-менеджером!
 								</p>
-								<a href="https://rostov.hh.ru/applicant/resumes/view?resume=dba1303fff09e45da50039ed1f414376637962" class="btn-list-item mt-2">
+								<a href="https://rostov.hh.ru/applicant/resumes/view?resume=dba1303fff09e45da50039ed1f414376637962" class="btn-list-item mt-2" target="_blank">
 									<span class="btn-list-item-top">Резюме</span>
 									<span class="btn-list-item-middle">Tilda</span>
 									<span class="btn-list-item-bottom"></span>
 								</a>
-								<a href="http://an.hohlova.tilda.ws" class="btn-list-item mt-2">
+								<a href="http://an.hohlova.tilda.ws" class="btn-list-item invert mt-2" target="_blank">
 									<span class="btn-list-item-top">Tilda</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
@@ -201,15 +213,15 @@
 							</div>
 						</li>
 						<li class="row justify-content-md-center mb-5">
-							<div class="cover-list-item col-12">
+							<div class="cover-list-item col-12 col-lg-3">
 								<img src="./photo/Rita%20GIF%20300.gif" alt="">
 							</div>
-							<div class="content-list-item col-12">
+							<div class="content-list-item col-12 col-lg-9">
 								<p class="title-list-item mt-2">Junior Project Manager / Комьюнити-менеджер / Tech support</p>
 								<p class="text-list-item">
 									Координация — мое второе имя. Первое — Маргарита. Заведу беклог задач, расставлю приоритеты, определю крайних и поставлю таски согласно графику разработки. Помогу с собраниями, приму участие в разработке ТЗ, составлю релиз-логи по итогам спринта, дам обратную связь лидам и продюсерам. Кроме того, есть опыт работы в техподдержке и комьюнити-менеджером. Мастер на все руки!
 								</p>
-								<a href="https://hh.ru/resume/8a16b7f0ff08a94d8d0039ed1f3063796d506b" class="btn-list-item mt-2">
+								<a href="https://hh.ru/resume/8a16b7f0ff08a94d8d0039ed1f3063796d506b" class="btn-list-item mt-2" target="_blank">
 									<span class="btn-list-item-top">Резюме</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
@@ -217,15 +229,15 @@
 							</div>
 						</li>
 						<li class="row justify-content-md-center mb-5">
-							<div class="cover-list-item col-12">
+							<div class="cover-list-item col-12 col-lg-3">
 								<img src="./photo/Denis%20GIF%20300.gif" alt="">
 							</div>
-							<div class="content-list-item col-12">
+							<div class="content-list-item col-12 col-lg-9">
 								<p class="title-list-item mt-2">Комьюнити-менеджер</p>
 								<p class="text-list-item">
-									Дайте в руки красный флаг и чашку кофе, остальное беру на себя: соберу комьюнити и поведу хоть на край света! Подружусь с лидерами мнений, заведу социальные сети, подготовлю контент-планы, напишу новости, составлю гайды, организую и проведу активности и сделаю всё, чтобы комьюнити было счастливо
+									Дайте в руки красный флаг и чашку кофе, остальное беру на себя: соберу комьюнити и поведу хоть на край света! Подружусь с лидерами мнений, заведу социальные сети, подготовлю контент-планы, напишу новости, составлю гайды, организую и проведу активности и сделаю всё, чтобы комьюнити было счастливо.
 								</p>
-								<a href="https://hh.ru/resume/6fa6353cff04069a150039ed1f717448644946" class="btn-list-item mt-2">
+								<a href="https://hh.ru/resume/6fa6353cff04069a150039ed1f717448644946" class="btn-list-item mt-2" target="_blank">
 									<span class="btn-list-item-top">Резюме</span>
 									<span class="btn-list-item-middle"></span>
 									<span class="btn-list-item-bottom"></span>
@@ -267,7 +279,7 @@
 			window.bgMain.classList.remove("rotate-180");
 		}
 
-		var timerPosition = setInterval(function () {
+		/*var timerPosition = setInterval(function () {
 
 			window.timerPositionX0 = setTimeout(function () {
 				clearBgMain();
@@ -294,9 +306,24 @@
 				window.bgMain.classList.add("position-"+getRandomInt(1,11));
 			}, window.bgTime.random());
 
-		}, 2500);
+		}, 2500);*/
 
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript" >
+		(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+			m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+		ym(88762149, "init", {
+			clickmap:true,
+			trackLinks:true,
+			accurateTrackBounce:true,
+			webvisor:true
+		});
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/88762149" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<!-- /Yandex.Metrika counter -->
 </body>
 </html>
